--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <body>
+        <section>
+        <head>Hello and welkum to my website!!1!1</head>
+        <h3>This is gonna be <em>interesting</em> -O-</h3>
+    </section>
+    <section>
+        <h1>This is my <em>T</em>e<strong>s</strong>t land :D</h1>
+        <img src="https://media.tenor.com/x8v1oNUOmg4AAAAM/rickroll-roll.gif" alt="nothing here..." width="500" height="500">
+        <p>are you ready to take myyyyy test????:3</p>
+    </section>
+    <section>
+        <fieldset>
+            <input type="radio"  name="light switch" value="ArE YOu sillyyy???" id="Are ya silleh??"> <label>Yes</label>
+            <button onclick="location.href='www.youtube.com'"
+        </fieldset>
+    </section>
+    </body>
+</html>
