--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
     <body>
         <section>
-        <head>Hello and welkum to my website!!1!1</head>
+        <head>Hello and welkum to my tierlist!!1!1</head>
         <h3>This is gonna be <em>interesting</em> -O-</h3>
     </section>
     <section>
-        <h1>This is my <em>T</em>e<strong>s</strong>t land :D</h1>
-        <img src="https://media.tenor.com/x8v1oNUOmg4AAAAM/rickroll-roll.gif" alt="nothing here..." width="500" height="500">
-        <p>are you ready to take myyyyy test????:3</p>
+      <h1>T1:</h1>
     </section>
     <section>
-        <fieldset>
-            <input type="radio"  name="light switch" value="ArE YOu sillyyy???" id="Are ya silleh??"> <label>Yes</label>
-        </fieldset>
+      <h1>T2:</h1>
+    </section>
+    <section>
+       <h1>T3:</h1>
+    </section>
+    <section>
+       <h1>T4:</h1>
+           <ol>Monkeywithnopant: HT4</ol>
+    </section>
+    <section>
+       <h1>T5:</h1>
     </section>
     </body>
 </html>
