--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     </section>
     <section>
        <h1>T3:</h1>
-           <ol>pavGamingzz: LT3 - NethPot</ol>
-           <ol>pavGamingzz: LT3 - CPVP</ol>
+           <p>pavGamingzz: LT3 - NethPot</p>
+           <p>pavGamingzz: LT3 - CPVP</p>
     </section>
     <section>
        <h1>T4:</h1>
-           <ol>pavGamingzz: HT4 - UHC</ol>
-           <ol>Monkeywithnopant: HT4 - NethPot</ol>
-           <ol>Monkeywithnopant: LT4 - UHC</ol>
-           <ol>amsuckei: LT4 - CPVP</ol>
+           <p><strong>pavGamingzz: HT4 - UHC</strong></p>
+           <p><strong>Monkeywithnopant: HT4 - NethPot</strong></p>
+           <p>Monkeywithnopant: LT4 - UHC</p>
+           <p>amsuckei: LT4 - CPVP</p>
     </section>
     <section>
        <h1>T5:</h1>
-           <ol>amsuckei: HT5 - NethPot</ol>
-           <ol>amsuckei: LT5 - SMP</ol>
+           <p><strong>amsuckei: HT5 - NethPot</strong></p>
+           <p>amsuckei: LT5 - SMP</p>
     </section>
     </body>
 </html>
